Major GUI refactoring, added PersonalProfile page, collected settings/utiliities under one page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,8 @@
     <string name="title_activity_temp_basal">Temp Basals</string>
     <string name="title_activity_monitor">Roundtrip Monitor</string>
     <string name="title_activity_mongo_dbsettings">MongoDB Settings</string>
+    <string name="title_activity_rtdemo_settings">RTDemoSettingsActivity</string>
+    <string name="title_activity_personal_profile">PersonalProfileActivity</string>
+    <string name="title_activity_utility">UtilityActivity</string>
 
 </resources>
