profile: removed isf, added bg target, min, max, maxTempBasal.  APSLogic now commands the pump to administer temp basals.  Ability to start/stop/suspend apslogic is added.  Needs ISF profile

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,6 @@
     <string name="title_activity_rtdemo_settings">RTDemoSettingsActivity</string>
     <string name="title_activity_personal_profile">PersonalProfileActivity</string>
     <string name="title_activity_utility">UtilityActivity</string>
+    <string name="title_activity_suspend_aps">SuspendAPSActivity</string>
 
 </resources>
