--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="title_activity_pump_settings">Pump Settings</string>
     <string name="title_activity_temp_basal">Temp Basals</string>
     <string name="title_activity_monitor">Roundtrip Monitor</string>
-    <string name="title_activity_mongo_dbsettings">MongoDB Settings</string>
+    <string name="title_activity_mongo_dbsettings">RestV1 Settings</string>
     <string name="title_activity_rtdemo_settings">RTDemoSettingsActivity</string>
     <string name="title_activity_personal_profile">PersonalProfileActivity</string>
     <string name="title_activity_utility">UtilityActivity</string>
